--- a/style.css
+++ b/style.css
@@ -1,39 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-bod;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
-.container {
-    width: 100%;
+body {
+    background: #78c1f3;
     min-height: 100vh;
-    background: linear-gradient(135deg, #153677, #4e085f);
-    padding: 10px;
-}
-
-.todo-app {
-    width: 100%;
-    max-width: 540px;
-    background: #fff;
-    margin: 100px auto 20px;
-    padding: 40px 30px 70px;
-    border-radius: 10px;
-}
-
-.todo-app h2{
-    color: #002765;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    justify-content: center;
 }
-
-.todo-app h2 img {
-    width: 30px;
-    margin-left: 10px;
+  
+.container {
+    background: #ffffff;
+    padding: 25px;
+    width: 550px;
+    border-radius: 10px;
 }
-
-.row {
+/**** Praying list *****/
+.text-body {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -41,75 +29,98 @@
     border-radius: 30px;
     padding-left: 20px;
     margin-bottom: 25px;
-}
-
-input {
+  }
+  
+  .text-body input {
     flex: 1;
     border: none;
     outline: none;
     background: transparent;
-    padding: 10px;
-    font-weight: 14px;
-}
-
-button {
-    border: none;
-    outline: none;
-    padding: 16px 50px;
-    background: #ff5945;
-    color: #fff;
-    font-size: 16px;
+    padding: 15px 0;
+    font-size: 20px;
+  }
+  
+  .text-body img {
     cursor: pointer;
     border-radius: 40px;
-}
+    height: 75px;
+    width: 75px;
+    padding: 15px;
+    background: #3256cd;
+  }
 
-ul li{
+  ul li {
     list-style: none;
-    font-size: 17px;
-    padding: 12px 8px 12px 50px;
-    user-select: none;
+    font-size: 18px;
     cursor: pointer;
-    position: relative;
-}
-
-ul li::before {
-    content: '';
-    position: absolute;
-    height: 28px;
-    width: 28px;
-    border-radius: 50%;
-    background-image: url(img/unchecked.png);
-    background-size: cover;
-    background-position: center;
-    top: 12px;
-    left: 8px;
-}
-
-ul li.checked {
-    color: #555;
-    text-decoration: line-through;
-}
-
-ul li.checked::before {
-    background-image: url(img/checked.png);
-}
-
-ul li span {
-    position: absolute;
-    right: 0;
-    top: 5px;
-    width: 40px;
-    height: 40px;
-    font-size: 22px;
-    color: #555;
-    line-height: 40px;
-    text-align: center;
-}
-
-ul li span:hover {
+    padding: 10px;
+  }
+  
+  li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background: #edeef0;
-}
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+  
+  h5 {
+    text-align: center;
+    margin-bottom: 10px;
+    color: green;
+  }
+  
+  .text-controls {
+    width: 25px;
+    height: 25px;
+    padding: 3px;
+    margin-right: 5px;
+  }
 
-body{
-    overflow-x: hidden;
-}
+  li {
+    opacity: 0;
+    animation: new-item-animation 0.3s linear forwards;
+  }
+  
+  @keyframes new-item-animation {
+    from {
+      opacity: 0;
+      transform: translateY(-400px);
+    }
+  
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  li.deleted-item {
+    animation: removed-item-animation 1s cubic-bezier(0.55, -0.04, 0.91, 0.94)
+      forwards;
+    transform-origin: 0% 100%;
+  }
+  
+  @keyframes removed-item-animation {
+    0% {
+      opacity: 1;
+      transform: rotateZ(0);
+    }
+  
+    100% {
+      opacity: 0;
+      transform: translateY(600px) rotateZ(90deg);
+    }
+  }
+
+  .toggleMe {
+    animation: hideMe 5s forwards;
+  }
+  @keyframes hideMe {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
